# executable-visualizer

./: Cargo.toml  readme.md  rust-toolchain.toml
.github/workflows/: publish_to_pages.yml  testing.yml
executable-visualizer-lib/: Cargo.toml
executable-visualizer-lib/src/: app.rs  file_loader.rs  inspector.rs  lib.rs  sections.rs
executable-visualizer/src/: main.rs
src/: inspector.rs  main.rs  sections.rs
web/: Cargo.toml
web/executable-visualizer-web/: Cargo.toml
web/executable-visualizer-web/src/: main.rs
