[package]
name = "executable-renderer"
version = "0.1.0"
description = "Visualize whats taking up space in executable"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26.1", default-features = false }
indexmap = { version = "2.1.0", features = ["serde"] }
natord = "1.0.9"
once_cell = "1.7"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3.17", default-features = false, features = [
  "formatting",
  "macros",
] }
vec1 = "1.8"
web-time = "0.2"
eframe = { version = "0.26.0", default-features = false, features = [
  "default_fonts",
  "glow",
] }

[dev-dependencies]
