[package]
name = "executable-visualizer-lib"
version = "0.1.0"
description = "Visualize whats taking up space in an executable"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
egui = { version = "0.26.1" }
eframe = { version = "0.26.0" }
serde = { version = "1.0", features = ["derive"], optional = true }
goblin = "0.8.0"
rfd = "0.14.1"
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"

[dev-dependencies]
