[package]
name = "executable-visualizer-web"
version = "0.1.0"
description = "Visualize whats taking up space in an executable"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26.1" }
eframe = { version = "0.26.0" }
executable-visualizer-lib = { path = "../../executable-visualizer-lib" }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.55"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
anyhow = "1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]

[dev-dependencies]
